# trade-journal-analysis

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
src/: main.py
src/constants/: env.py  html_templates.py  html_templates_gdrive.py  prompt.py  user_input_template.py
src/models/: __init__.py  trading_data.py
src/service/: gmail_service.py  google_auth.py  google_drive.py  trading_analyzer.py
src/util/: __init__.py  generate_report.py  get_closed_pnl.py  llm_analyzer.py  llm_report_section.py  report_utils.py
